--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -14,14 +14,14 @@ status-website:
   # cname: demo.upptime.js.org
   baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: Adsenser
+  introTitle: "**Adsenser** 사이트 실시간 모니터링"
+  introMessage: 일정시간마다 자동으로 사이트 다운 여부 및 핑을 체크합니다.
   navbar:
-    - title: Status
+    - title: 상태
       href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+    - title: 프로필
+      href: https://github.com/$OWNER
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
