--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,10 +3,10 @@ owner: Adsenser # Your GitHub organization or username, where this repository li
 repo: upptime # The name of this repository
 
 sites:
+  - name: spot.damoat CF Pages
+    url: https://spot.damoat.com/
   - name: spot.damoat API server
     url: https://api-spot.damoat.com/server.php?initial=true
-  - name: spot.damoat CloudFlare Pages
-    url: https://spot.damoat.com/
   - name: jusho API server
     url: https://madefor.github.io/postal-code-api/api/v1/350/1106.json
 
@@ -17,7 +17,7 @@ status-website:
   baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Adsenser
-  introTitle: "**Adsenser** 사이트 실시간 모니터링"
+  introTitle: "**사이트** 실시간 모니터링"
   introMessage: 일정시간마다 자동으로 사이트 다운 여부 및 핑을 체크합니다.
   navbar:
     - title: 상태
