--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,13 +17,11 @@ status-website:
   baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Adsenser
-  introTitle: "**사이트** 실시간 모니터링"
+  introTitle: "**실시간** 모니터링"
   introMessage: 일정시간마다 자동으로 사이트 다운 여부 및 핑을 체크합니다.
   navbar:
     - title: 상태
       href: /
-    - title: 프로필
-      href: https://github.com/$OWNER
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
