--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,9 +3,9 @@ owner: Adsenser # Your GitHub organization or username, where this repository li
 repo: upptime # The name of this repository
 
 sites:
-  - name: spot.damoat
+  - name: 스팟 다모앗
     url: https://spot.damoat.com/
-  - name: jusho API 
+  - name: 주소 API
     url: https://madefor.github.io/postal-code-api/api/v1/350/1106.json
 
 status-website:
@@ -16,7 +16,7 @@ status-website:
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Adsenser
   introTitle: "**실시간** 모니터링"
-  introMessage: 일정시간마다 자동으로 사이트 다운 여부 및 핑을 체크
+  introMessage: 일정시간마다 사이트의 다운 여부와 핑을 체크합니다.
   navbar:
     - title: 상태
       href: /
