--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,9 +3,9 @@ owner: Adsenser # Your GitHub organization or username, where this repository li
 repo: upptime # The name of this repository
 
 sites:
-  - name: 스팟 다모앗
+  - name: spot.damoat
     url: https://spot.damoat.com/
-  - name: 주소 API
+  - name: 주소변환 API
     url: https://madefor.github.io/postal-code-api/api/v1/350/1106.json
 
 status-website:
